// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicySetOps createPolicySet() 1: Create non-existing policy set [FrodoTestPolicySet3] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684636897431,
  "description": null,
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684636897431,
  "name": "FrodoTestPolicySet3",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps createPolicySet() 2: Create existing policy set [FrodoTestPolicySet4] 1`] = `
{
  "code": 409,
  "message": "Application already exists",
  "reason": "Conflict",
}
`;

exports[`PolicySetOps deletePolicySet() 1: Delete existing policy set [FrodoTestPolicySet7] 1`] = `{}`;

exports[`PolicySetOps deletePolicySet() 2: Delete non-existing policy set [DoesNotExist] 1`] = `
{
  "code": 404,
  "message": "DoesNotExist application not found in realm.",
  "reason": "Not Found",
}
`;

exports[`PolicySetOps exportPolicySet() 1: Export existing policy set w/o deps [FrodoTestPolicySet9] 1`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {
    "FrodoTestPolicySet9": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684636896868,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684636896868,
      "name": "FrodoTestPolicySet9",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
  },
  "resourcetype": {},
  "script": {},
}
`;

exports[`PolicySetOps exportPolicySet() 2: Export existing policy set w/ deps [FrodoTestPolicySet9] 1`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {
    "FrodoTestPolicySet9": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684636896868,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684636896868,
      "name": "FrodoTestPolicySet9",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
  },
  "resourcetype": {
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2": {
      "actions": {
        "DELETE": true,
        "GET": true,
        "HEAD": true,
        "OPTIONS": true,
        "PATCH": true,
        "POST": true,
        "PUT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030487,
      "description": "The built-in URL Resource Type available to OpenAMPolicies.",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684633977673,
      "name": "URL",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
      ],
      "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    },
  },
  "script": {},
}
`;

exports[`PolicySetOps exportPolicySet() 3: Export non-existing policy set [DoesNotExist] 1`] = `
"Export error:
Request failed with status code 404"
`;

exports[`PolicySetOps exportPolicySets() 1: Export all policy sets 1`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {
    "FrodoTestPolicySet1": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684636896177,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684636896177,
      "name": "FrodoTestPolicySet1",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet3": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684636897431,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684636897431,
      "name": "FrodoTestPolicySet3",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet4": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684636896382,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684636896382,
      "name": "FrodoTestPolicySet4",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet5": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684636896507,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684636897578,
      "name": "FrodoTestPolicySet5",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet7": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684636896702,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684636896702,
      "name": "FrodoTestPolicySet7",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet9": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684636896868,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684636896868,
      "name": "FrodoTestPolicySet9",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
  },
  "resourcetype": {
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2": {
      "actions": {
        "DELETE": true,
        "GET": true,
        "HEAD": true,
        "OPTIONS": true,
        "PATCH": true,
        "POST": true,
        "PUT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030487,
      "description": "The built-in URL Resource Type available to OpenAMPolicies.",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684633977673,
      "name": "URL",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
      ],
      "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    },
  },
  "script": {},
}
`;

exports[`PolicySetOps getPolicySet() 1: Get existing policy set [FrodoTestPolicySet1] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684636896177,
  "description": null,
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684636896177,
  "name": "FrodoTestPolicySet1",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps getPolicySet() 2: Get non-existing policy set [DoesNotExist] 1`] = `
{
  "code": 404,
  "message": "Unable to retrieve application under realm /alpha.",
  "reason": "Not Found",
}
`;

exports[`PolicySetOps getPolicySets() 1: Get all policy sets 1`] = `
[
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684636896177,
    "description": null,
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684636896177,
    "name": "FrodoTestPolicySet1",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684636896382,
    "description": null,
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684636896382,
    "name": "FrodoTestPolicySet4",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684636896507,
    "description": null,
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684636896507,
    "name": "FrodoTestPolicySet5",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684636896702,
    "description": null,
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684636896702,
    "name": "FrodoTestPolicySet7",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "creationDate": 1684636896868,
    "description": null,
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
    "lastModifiedDate": 1684636896868,
    "name": "FrodoTestPolicySet9",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
]
`;

exports[`PolicySetOps importFirstPolicySet() 1: Import first policy set 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684636899000,
  "description": null,
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684636899000,
  "name": "FrodoTestPolicySet13",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps importPolicySet() 1: Import existing policy set [FrodoTestPolicySet11] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684636898848,
  "description": null,
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684636898848,
  "name": "FrodoTestPolicySet11",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps importPolicySet() 2: Import non-existing policy set [DoesNotExist] 1`] = `
"Import error:
DoesNotExist not found in import data!"
`;

exports[`PolicySetOps importPolicySets() 1: Import all policy sets 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684636899301,
  "description": null,
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684636899301,
  "name": "FrodoTestPolicySet16",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps updatePolicySet() 1: Update existing policy set [FrodoTestPolicySet5] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684636896507,
  "description": null,
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684636897578,
  "name": "FrodoTestPolicySet5",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps updatePolicySet() 2: Update non-existing policy set [FrodoTestPolicySet6] 1`] = `
{
  "code": 404,
  "message": "FrodoTestPolicySet6 not found.",
  "reason": "Not Found",
}
`;
